--- a/app/index.html
+++ b/app/index.html
@@ -574,6 +574,243 @@
 
           </div>
         </section>
+
+        <section class="new-items" >
+          <div class="container">
+            <div class="new-items__title title">Новинки</div>
+            <div class="new-items__subtitle">Новые модели из всех категорий</div>
+            <div class="new-items__items " id="newBoxs">
+
+              <div class="new-items__item newBox">
+                <div class="new-items__inner">
+                  <div class="new-items__discount">
+                    <span>new
+                    <div class="new-items__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="new-items__images">
+                    <a href="#"><img src="images/new-items 1.jpeg" alt="new-items images"></a>
+                  </div>
+                  <div class="new-items__description"> Рубашка</div>
+                  <div class="new-items__price">
+                    <div class="new-items__price--new">3400₽</div>
+                  </div>
+                  <div class="new-items__hidden">
+                    <div class="new-items__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="new-items__text">Купить</div>
+                        <div class="new-items__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="new-items__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="new-items__item newBox">
+                <div class="new-items__inner">
+                  <div class="new-items__discount">
+                    <span>new
+                    <div class="new-items__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="new-items__images">
+                    <a href="#"><img src="images/new-items 2.jpeg" alt="new-items images"></a>
+                  </div>
+                  <div class="new-items__description"> Брюки</div>
+                  <div class="new-items__price">
+                    <div class="new-items__price--new">4650₽</div>
+                  </div>
+                  <div class="new-items__hidden">
+                    <div class="new-items__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="new-items__text">Купить</div>
+                        <div class="new-items__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="new-items__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="new-items__item newBox">
+                <div class="new-items__inner">
+                  <div class="new-items__discount">
+                    <span>new
+                    <div class="new-items__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="new-items__images">
+                    <a href="#"><img src="images/new-items 3.jpeg" alt="new-items images"></a>
+                  </div>
+                  <div class="new-items__description"> Тренч</div>
+                  <div class="new-items__price">
+                    <div class="new-items__price--new">7300₽</div>
+                  </div>
+                  <div class="new-items__hidden">
+                    <div class="new-items__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="new-items__text">Купить</div>
+                        <div class="new-items__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="new-items__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="new-items__item newBox">
+                <div class="new-items__inner">
+                  <div class="new-items__discount">
+                    <span>new
+                    <div class="new-items__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="new-items__images">
+                    <a href="#"><img src="images/new-items 4.jpeg" alt="new-items images"></a>
+                  </div>
+                  <div class="new-items__description"> Джинсы</div>
+                  <div class="new-items__price">
+                    <div class="new-items__price--new">3800₽</div>
+                  </div>
+                  <div class="new-items__hidden">
+                    <div class="new-items__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="new-items__text">Купить</div>
+                        <div class="new-items__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="new-items__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="new-items__item newBox">
+                <div class="new-items__inner">
+                  <div class="new-items__discount">
+                    <span>new
+                    <div class="new-items__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="new-items__images">
+                    <a href="#"><img src="images/new-items 5.jpeg" alt="new-items images"></a>
+                  </div>
+                  <div class="new-items__description"> Брюки</div>
+                  <div class="new-items__price">
+                    <div class="new-items__price--new">4800₽</div>
+                  </div>
+                  <div class="new-items__hidden">
+                    <div class="new-items__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="new-items__text">Купить</div>
+                        <div class="new-items__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="new-items__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="new-items__item newBox">
+                <div class="new-items__inner">
+                  <div class="new-items__discount">
+                    <span>new
+                    <div class="new-items__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="new-items__images">
+                    <a href="#"><img src="images/new-items 6.jpeg" alt="new-items images"></a>
+                  </div>
+                  <div class="new-items__description"> Пальто</div>
+                  <div class="new-items__price">
+                    <div class="new-items__price--new">9800₽</div>
+                  </div>
+                  <div class="new-items__hidden">
+                    <div class="new-items__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="new-items__text">Купить</div>
+                        <div class="new-items__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="new-items__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="new-items__item newBox">
+                <div class="new-items__inner">
+                  <div class="new-items__discount">
+                    <span>new
+                    <div class="new-items__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="new-items__images">
+                    <a href="#"><img src="images/new-items 7.jpeg" alt="new-items images"></a>
+                  </div>
+                  <div class="new-items__description"> Пиджак</div>
+                  <div class="new-items__price">
+                    <div class="new-items__price--new">4300₽</div>
+                  </div>
+                  <div class="new-items__hidden">
+                    <div class="new-items__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="new-items__text">Купить</div>
+                        <div class="new-items__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="new-items__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="new-items__item newBox">
+                <div class="new-items__inner">
+                  <div class="new-items__discount">
+                    <span>new
+                    <div class="new-items__discount-square">
+                      <span></span>
+                    </div>
+                  </span>
+                  </div>
+                  <div class="new-items__images">
+                    <a href="#"><img src="images/new-items 8.jpeg" alt="new-items images"></a>
+                  </div>
+                  <div class="new-items__description"> Свитер</div>
+                  <div class="new-items__price">
+                    <div class="new-items__price--new">2200₽</div>
+                  </div>
+                  <div class="new-items__hidden">
+                    <div class="new-items__bottom">
+                      <a class="bottom-buy" href="#">
+                        <div class="new-items__text">Купить</div>
+                        <div class="new-items__icon icon-shopping-cart"></div>
+                      </a>
+                      <a class="new-items__buy" href="#">Купить в один клик</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="new-items__loadMore" id="newItemsloadMore"> Загрузить больше товаров</div>
+
+          </div>
+
       </div>
       <footer class="footer"></footer>
     </div>
