--- a/app/index.html
+++ b/app/index.html
@@ -575,6 +575,107 @@
           </div>
         </section>
 
+        <section class="collections">
+          <div class="container">
+            <div class="collections_mainTitle title">Летняя коллекция</div>
+            <div class="collections__inner">
+
+              <div class="collections__item">
+                <div class="collections__item-wrapper">
+                  <div class="collections__item-left">
+                    <div class="collections__item-left__img img"
+                     style="background-image: url(images/collection-slider-1.jpeg);"></div>          
+                  </div>
+                  <div class="collections__item-right">
+                    <div class="collections__item-right__img">
+                      <img src="images/collection-slider-right-1.jpeg" alt="collection slider images">
+                    </div>
+                    <div class="collections__item-right__inner">
+                      <div class="collections__item-right__title">Рубашка</div>
+                      <div class="collections__item-right__price--new">2500₽</div>
+                    </div>
+                    <div class="collections__item-right__bottom">
+                      <a class="button-buy" href="#"></a>
+                      <div class="button-buy__icon icon-shopping-cart"></div>
+                      <div class="button-buy__text">В избранное</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+      
+                    <div class="collections__item">
+                      <div class="collections__item-wrapper">
+                        <div class="collections__item-left">
+                          <div class="collections__item-left__img img"
+                           style="background-image: url(images/collection-slider-2.jpeg);"></div>          
+                        </div>
+                        <div class="collections__item-right">
+                          <div class="collections__item-right__img">
+                            <img src="images/collection-slider-right-2.jpeg" alt="collection slider images">
+                          </div>
+                          <div class="collections__item-right__inner">
+                            <div class="collections__item-right__title">Шорты</div>
+                            <div class="collections__item-right__price--new">2700₽</div>
+                          </div>
+                          <div class="collections__item-right__bottom">
+                            <a class="button-buy" href="#"></a>
+                            <div class="button-buy__icon icon-shopping-cart"></div>
+                            <div class="button-buy__text">В избранное</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="collections__item">
+                      <div class="collections__item-wrapper">
+                        <div class="collections__item-left">
+                          <div class="collections__item-left__img img"
+                           style="background-image: url(images/collection-slider-3.jpeg);"></div>          
+                        </div>
+                        <div class="collections__item-right">
+                          <div class="collections__item-right__img">
+                            <img src="images/collection-slider-right-3.jpeg" alt="collection slider images">
+                          </div>
+                          <div class="collections__item-right__inner">
+                            <div class="collections__item-right__title">Джинсы</div>
+                            <div class="collections__item-right__price--new">3200₽</div>
+                          </div>
+                          <div class="collections__item-right__bottom">
+                            <a class="button-buy" href="#"></a>
+                            <div class="button-buy__icon icon-shopping-cart"></div>
+                            <div class="button-buy__text">В избранное</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="collections__item">
+                      <div class="collections__item-wrapper">
+                        <div class="collections__item-left">
+                          <div class="collections__item-left__img img"
+                           style="background-image: url(images/collection-slider-4.jpeg);"></div>          
+                        </div>
+                        <div class="collections__item-right">
+                          <div class="collections__item-right__img">
+                            <img src="images/collection-slider-right-4.jpeg" alt="collection slider images">
+                          </div>
+                          <div class="collections__item-right__inner">
+                            <div class="collections__item-right__title">Штаны</div>
+                            <div class="collections__item-right__price--new">3500₽</div>
+                          </div>
+                          <div class="collections__item-right__bottom">
+                            <a class="button-buy" href="#"></a>
+                            <div class="button-buy__icon icon-shopping-cart"></div>
+                            <div class="button-buy__text">В избранное</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+            </div>
+          </div>
+        </section>
+
         <section class="new-items" >
           <div class="container">
             <div class="new-items__title title">Новинки</div>
